--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
+    "jasmine-marbles": "^0.6.0",
     "npm": "^6.11.3",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
